# iced-test-aya-1

./: .dir-locals.el  Cargo.toml  README.md
iced-test-aya/: Cargo.toml
iced-test-aya-common/: Cargo.toml
iced-test-aya-common/src/: lib.rs
iced-test-aya-ebpf/: Cargo.toml
iced-test-aya-ebpf/src/: main.rs
iced-test-aya/src/: main.rs
xtask/src/: build_ebpf.rs  run.rs
