[package]
name = "iced-test-aya"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.12"
aya-log = "0.2"
iced-test-aya-common = { path = "../iced-test-aya-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "full"] }
iced = { version = "0.12.1", features = ["tokio"] }

[[bin]]
name = "iced-test-aya"
path = "src/main.rs"
